--- a/src/main/resources/templates/account/index.html
+++ b/src/main/resources/templates/account/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
 
 <head>
@@ -16,10 +16,11 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-md-6">
-      <div>
+
+      <div th:if="${accountList.size()==0}">
         <h2>No Accounts yet!</h2>
       </div>
-      <div>
+      <div th:unless="${accountList.size()==0}">
         <h2 class="my-5">Accounts</h2>
         <table class="table table-striped table-responsive-md">
           <thead>
@@ -33,16 +34,17 @@
             <th>Account Transactions</th>
           </tr>
           </thead>
+
+
+
           <tbody>
-          <tr >
-            <td></td>
-            <td></td>
-            <td></td>
-            <td ></td>
-            <td></td>
+          <tr th:each="list:${accountList}" >
+            <td th:text="${list}" th:text="${list}"></td>
             <td><a class="btn btn-danger" href="#">Delete</a></td>
             <td><a class="btn btn-success" href="#">Account Transaction</a></td>
           </tr>
+
+
           </tbody>
         </table>
       </div>
