--- a/src/main/resources/templates/account/create-account.html
+++ b/src/main/resources/templates/account/create-account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
 
     <head>
@@ -16,16 +16,16 @@
             <h2 class="mb-5">New User</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <form action="#">
+                    <form th:object="${account}" action="#">
                         <div class="row">
                             <div class="form-group blu-margin">
                                 <label for="userId" class="col-form-label">UserId</label>
-                                <input type="text" class="form-control" id="userId" placeholder="user id">
+                                <input th:field="*{userID}" type="text" class="form-control" id="userId" placeholder="user id">
                             </div>
 
                             <div class="form-group blu-margin">
                                 <label for="balance" class="col-form-label">Balance</label>
-                                <input type="text" class="form-control" id="balance" placeholder="balance">
+                                <input th:field="*{balance}" type="text" class="form-control" id="balance" placeholder="balance">
                             </div>
 
                             <div class="form-group blu-margin">
