--- a/src/main/resources/templates/account/create-account.html
+++ b/src/main/resources/templates/account/create-account.html
@@ -16,11 +16,11 @@
             <h2 class="mb-5">New User</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <form th:object="${account}" action="#">
+                    <form th:object="${account}" th:action="@{/create}" method="post">
                         <div class="row">
                             <div class="form-group blu-margin">
                                 <label for="userId" class="col-form-label">UserId</label>
-                                <input th:field="*{userID}" type="text" class="form-control" id="userId" placeholder="user id">
+                                <input th:field="*{userId}" type="text" class="form-control" id="userId" placeholder="user id">
                             </div>
 
                             <div class="form-group blu-margin">
