--- a/src/main/resources/templates/account/index.html
+++ b/src/main/resources/templates/account/index.html
@@ -44,7 +44,10 @@
             <td th:text="${account.getBalance()}"></td>
             <td th:text="${account.getAccountType()}"></td>
             <td th:text="${account.getCreationDate()}"></td>
-            <td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${account.id})}">Delete</a></td>
+            <td>
+              <a th:if="${account.accountStatus.name()=='ACTIVE'}" class="btn btn-danger" th:href="@{/delete/{id}(id=${account.id})}">Delete</a>
+              <a th:if="${account.accountStatus.name()=='DELETED'}" class="btn btn-danger disabled" th:href="@{/delete/{id}(id=${account.id})}" disabled>Delete</a>
+            </td>
             <td><a class="btn btn-success" href="#">Account Transaction</a></td>
           </tr>
 
