--- a/src/main/resources/templates/transaction/make-transfer.html
+++ b/src/main/resources/templates/transaction/make-transfer.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,13 +15,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <div>
-                        <form action="#">
+                        <form th:object="${accounts}"   action="@{make-transfer}">
                             <div class="row">
                                 <div class="form-group blu-margin">
                                     <label for="sender" class="col-form-label">Sender</label>
                                     <select class="form-control" id="sender">
                                         <option value="0">Select Account</option>
-                                        <option></option>
+                                        <option th:each="account: ${accounts}"
+                                        th:value="${account.getId()}" th:text="${account.userId}"></option>
                                     </select>
                                 </div>
         
@@ -28,18 +30,19 @@
                                     <label for="receiver" class="col-form-label">Receiver</label>
                                     <select class="form-control" id="receiver">
                                         <option value="0">Select Account</option>
-                                        <option></option>
+                                        <option th:each="account: ${accounts}"
+                                                th:value="${account.getId()}" th:text="${account.userId}"></option>
                                     </select>
                                 </div>
         
                                 <div class="form-group blu-margin">
                                     <label for="amount" class="col-form-label">Amount</label>
-                                    <input type="text" class="form-control" id="amount" placeholder="Amount">
+                                    <input th:field="*{amount}" type="text" class="form-control" id="amount" placeholder="Amount">
                                 </div>
         
                                 <div class="form-group blu-margin">
                                     <label for="message" class="col-form-label">Message</label>
-                                    <input type="text" class="form-control" id="message" placeholder="Message">
+                                    <input th:field="*{message}" type="text" class="form-control" id="message" placeholder="Message">
                                 </div>
                             </div>
                             <div class="row">
