--- a/src/main/resources/templates/transaction/make-transfer.html
+++ b/src/main/resources/templates/transaction/make-transfer.html
@@ -15,23 +15,25 @@
             <div class="row">
                 <div class="col-md-6">
                     <div>
-                        <form th:object="${accounts}"   action="@{make-transfer}">
+                        <form th:object="${transaction}"   action="@{/transfer}" method="post">
                             <div class="row">
                                 <div class="form-group blu-margin">
                                     <label for="sender" class="col-form-label">Sender</label>
-                                    <select class="form-control" id="sender">
+                                    <select class="form-control" id="sender" th:field="*{sender}">
                                         <option value="0">Select Account</option>
-                                        <option th:each="account: ${accounts}"
-                                        th:value="${account.getId()}" th:text="${account.userId}"></option>
+                                        <option th:each="account :${accounts}" th:value="${account.id}"
+                                                th:text="${account.balance}+'-'+${account.userId}+'-'+${account.accountType.name()}"
+                                        ></option>
                                     </select>
                                 </div>
-        
+
                                 <div class="form-group blu-margin">
                                     <label for="receiver" class="col-form-label">Receiver</label>
-                                    <select class="form-control" id="receiver">
+                                    <select class="form-control" id="receiver" th:field="*{receiver}">
                                         <option value="0">Select Account</option>
-                                        <option th:each="account: ${accounts}"
-                                                th:value="${account.getId()}" th:text="${account.userId}"></option>
+                                        <option th:each="account :${accounts}" th:value="${account.id}"
+                                                th:text="${account.balance}+'-'+${account.userId}+'-'+${account.accountType.name()}"
+                                        ></option>
                                     </select>
                                 </div>
         
@@ -64,16 +66,16 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr >
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+                            <tr th:each="lTransaction : ${lastTransactions}" >
+                                <td th:text="${lTransaction.sender}"></td>
+                                <td th:text="${lTransaction.receiver}"></td>
+                                <td th:text="${lTransaction.amount}"></td>
+                                <td th:text="${lTransaction.creationDate}"></td>
+                                <td th:text="${lTransaction.message}"></td>
+                            </tr>
                             </tbody>
                         </table>
-                        <p class="my-5"><a href="#" class="btn btn-primary">Home Page</a></p>
+                        <p class="my-5"><a th:href="@{/index}" class="btn btn-primary">Home Page</a></p>
                     </div>
                 </div>
             </div>
